--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 html {
   min-height: 100%;
   position: relative;
@@ -46,36 +52,117 @@ h4 {
   cursor: pointer;
 }
 
-.container-fluid {
-  padding-top: 70px;
-  padding-bottom: 70px;
-}
-
-.navbar-brand {
-  color: #1abc9c !important;
-}
-
-.navbar {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  border: 0;
-  border-radius: 0;
-  margin-bottom: 0;
-  font-size: 12px;
-  letter-spacing: 5px;
-  background-color: black;
-}
-
 .navbar-nav li a:hover {
   color: #1abc9c !important;
 }
 
-.invisible {
-  visibility: hidden;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: sans-serif;
 }
 
-.visible {
-  visibility: visible;
+nav {
+  height: 10vh;
+  background: black;
+  display: flex;
+}
+
+.logo h1 {
+  font-size: 2rem;
+  display: flex;
+  align-items: center;
+  padding-left: 60px;
+}
+
+.nav-links {
+  display: flex;
+  list-style: none;
+  width: 50%;
+  height: 100%;
+  justify-content: space-around;
+  align-items: center;
+  margin-left: auto;
+}
+
+.nav-links li a {
+  color: white;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+.nav-links li a:hover {
+  color: #1abc9c;
+}
+
+@media screen and (max-width: 768px) {
+  .line {
+    width: 30px;
+    height: 3px;
+    background: white;
+    margin: 5px;
+  }
+  nav {
+    position: relative;
+  }
+
+  .hamburger {
+    position: absolute;
+    cursor: pointer;
+    right: 5%;
+    top: 50%;
+    transform: translate(-5%, -50%);
+    z-index: 13;
+  }
+
+  .logo h1 {
+    font-size: 2rem;
+    width: 60vw;
+    padding-left: 15px;
+  }
+
+  .nav-links {
+    position: fixed;
+    background: BLACK;
+    height: 100vh;
+    width: 100%;
+    flex-direction: column;
+    /* Distance from left and top */
+    clip-path: circle(10px at 90% -10%);
+    -webkit-clip-path: circle(10px at 90% -10%);
+    transition: all 1s ease-out;
+    pointer-events: none;
+    z-index: 2;
+  }
+  .nav-links.open {
+    clip-path: circle(1000px at 90% -10%);
+    -webkit-clip-path: circle(1000px at 90% -10%);
+    pointer-events: all;
+  }
+  .landing {
+    flex-direction: column;
+  }
+  .nav-links li {
+    opacity: 0;
+  }
+  .nav-links li a {
+    font-size: 25px;
+  }
+  .nav-links li:nth-child(1) {
+    transition: all 0.5s ease 0.2s;
+  }
+  .nav-links li:nth-child(2) {
+    transition: all 0.5s ease 0.4s;
+  }
+  .nav-links li:nth-child(3) {
+    transition: all 0.5s ease 0.6s;
+  }
+  li.fade {
+    opacity: 1;
+  }
 }
 
 .lead {
@@ -120,10 +207,12 @@ h4 {
 .logoff a {
   border: 2px solid black;
   font-size: 2rem;
+  display: inline-block;
+  width: 50vw;
   text-decoration: none;
-  padding: 3px 291px;
   color: #1abc9c;
   background-color: black;
+  text-align: center;
 }
 
 .logoff a:hover {
